# sge

./: Cargo.toml  README.org  copy_project.sh  install.sh  todo.org
assets/data/: test.toml
assets/scripts/: colors.py  output.rs  shell.nix
assets/shaders/circle/: fragment.glsl
assets/shaders/flat/: vertex.glsl
crates/color/: Cargo.toml
crates/color/src/: data.rs  lib.rs  schemes.rs  u8.rs
crates/engine_4_macros/: Cargo.toml
crates/engine_4_macros/src/: lib.rs
crates/error_union/: Cargo.toml
crates/error_union/src/: lib.rs  main.rs
crates/gilrs_input_helper/src/: lib.rs
crates/include_assets/: Cargo.toml
crates/include_assets/src/: lib.rs  main.rs
crates/sge_animation/: Cargo.toml
crates/sge_animation/src/: lib.rs
crates/sge_api/: Cargo.toml
crates/sge_api/src/: area.rs  lib.rs  shapes_2d.rs
crates/sge_audio/: Cargo.toml
crates/sge_camera/: Cargo.toml
crates/sge_color/: Cargo.toml  build.rs  colors.json
crates/sge_config/: Cargo.toml
crates/sge_debug_visualisations/: Cargo.toml
crates/sge_debugging/: Cargo.toml
crates/sge_egui/: Cargo.toml
crates/sge_input/: Cargo.toml
crates/sge_input/src/: gamepad.rs  lib.rs
crates/sge_logging/: Cargo.toml
crates/sge_macros/: Cargo.toml
crates/sge_math/: Cargo.toml
crates/sge_particles/: Cargo.toml
crates/sge_physics/: Cargo.toml
crates/sge_physics-bak/: Cargo.toml
crates/sge_rendering/: Cargo.toml
crates/sge_rng/: Cargo.toml
crates/sge_shapes/: Cargo.toml
crates/sge_time/: Cargo.toml
crates/sge_types/: Cargo.toml
crates/sge_ui/: Cargo.toml
crates/sge_utils/: Cargo.toml
crates/sge_window/: Cargo.toml
crates/winit_input_helper/: Cargo.toml
documentation/src/: creating_a_window.md
examples/: 2d_platformer.rs  2d_platformer_simple.rs  3d.rs  3d_render_textures.rs  action_mapping.rs  color_schemes.rs  cool.rs  custom_init.rs  default_material.rs  demo.rs  ellipse.rs  empty.rs  fonts.rs  gamepad.rs  gradients.rs  include_assets.rs  include_spritesheet.rs  interpolation.rs  logging.rs  material.rs  music_composition.rs  particles.rs  physics.rs  post_processing.rs  post_processing_2.rs  render_textures.rs  rich_text.rs  shapes_3d.rs  specular.rs  spritesheet.rs  storage.rs  tailwind_colors.rs  text.rs  texture_positioning.rs  textured_object.rs  textures.rs  ui.rs
examples/perf_test/: Cargo.toml
src/: api.rs  color.rs  config.rs  debugging.rs  draw_queue_2d.rs  image.rs  input.rs  lib.rs  logging.rs  object_3d.rs  post_processing.rs  prelude.rs  programs.rs  render_pipeline.rs  shapes_2d.rs  shapes_3d.rs  text_rendering.rs  user_storage.rs  window.rs
src/camera/: mod.rs
src/collisions/: mod.rs
src/color/: tests.rs
src/debugging/: grid.rs
src/image/: mod.rs  rendering.rs
src/input/: keys.rs  mod.rs
src/text_rendering/: icons.rs  mod.rs  rich_text.rs  wrapped_text.rs
src/textures/: atlas.rs  mod.rs
src/ui/: mod.rs
src/utils/: mod.rs
(+121 files in other folders)
