[package]
name = "include_assets"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.5.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
rand.workspace = true
ron = "0.12.0"
serde = "1.0.228"
serde_json = "1.0.149"
syn = "2.0.117"
toml = "1.0.6"
walkdir = "2.5.0"
