[package]
name = "sge_animation"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_math.workspace = true
sge_color.workspace = true
sge_math.workspace = true
sge_rendering = { version = "0.1.0", path = "../sge_rendering" }
sge_shapes.workspace = true
sge_time = { version = "0.1.0", path = "../sge_time" }
sge_types = { version = "0.1.0", path = "../sge_types" }
