[package]
name = "sge_api"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_math.workspace = true
easy-ext = "1.0.2"
paste.workspace = true
sge_color.workspace = true
sge_macros.workspace = true
sge_math.workspace = true
sge_rendering = { version = "0.1.0", path = "../sge_rendering" }
sge_shapes.workspace = true
sge_textures = { version = "0.1.0", path = "../sge_textures" }
sge_types = { version = "0.1.0", path = "../sge_types" }
sge_utils = { version = "0.1.0", path = "../sge_utils" }
