[package]
name = "sge_input"
version = "0.1.0"
edition = "2024"

[features]
default = ["gamepad", "precise_cursor_movement"]
gamepad = ["dep:gilrs_input_helper"]
precise_cursor_movement = ["winit_input_helper/precise_cursor_movement"]

[dependencies]
bevy_math.workspace = true
error_union.workspace = true
gilrs_input_helper = { version = "0.1.0", path = "../gilrs_input_helper", optional = true }
glium.workspace = true
global = { version = "0.1.0", path = "../global" }
log.workspace = true
sge_types = { version = "0.1.0", path = "../sge_types" }
winit = "0.30.12"
winit_input_helper = { version = "0.17.0", path = "../winit_input_helper" }
